factored out comparable list